usr/src/uts/common/io/mac/mac_client.c
@@ -609,10 +609,10 @@ mac_client_link_state(mac_client_impl_t *mcip)
 uint64_t
 mac_client_stat_get(mac_client_handle_t mch, uint_t stat)
 {
-	mac_client_impl_t 	*mcip = (mac_client_impl_t *)mch;
-	mac_impl_t 		*mip = mcip->mci_mip;
-	flow_entry_t 		*flent = mcip->mci_flent;
-	mac_soft_ring_set_t 	*mac_srs;
+	mac_client_impl_t	*mcip = (mac_client_impl_t *)mch;
+	mac_impl_t		*mip = mcip->mci_mip;
+	flow_entry_t		*flent = mcip->mci_flent;
+	mac_soft_ring_set_t	*mac_srs;
 	mac_rx_stats_t		*mac_rx_stat, *old_rx_stat;
 	mac_tx_stats_t		*mac_tx_stat, *old_tx_stat;
 	int i;
@@ -1447,7 +1447,7 @@ mac_client_open(mac_handle_t mh, mac_client_handle_t *mchp, char *name,
 	 */
 	mac_client_add(mcip);
 
-	mcip->mci_share = NULL;
+	mcip->mci_share = 0;
 	if (share_desired)
 		i_mac_share_alloc(mcip);
 
@@ -1702,7 +1702,7 @@ mac_client_set_rings_prop(mac_client_impl_t *mcip, mac_resource_props_t *mrp,
 	uint_t			ringcnt;
 	boolean_t		unspec;
 
-	if (mcip->mci_share != NULL)
+	if (mcip->mci_share != 0)
 		return (EINVAL);
 
 	if (mrp->mrp_mask & MRP_RX_RINGS) {
@@ -1787,7 +1787,7 @@ mac_client_set_rings_prop(mac_client_impl_t *mcip, mac_resource_props_t *mrp,
 				}
 			/* Let check if we can give this an excl group */
 			} else if (group == defgrp) {
-				ngrp = 	mac_reserve_rx_group(mcip, mac_addr,
+				ngrp = mac_reserve_rx_group(mcip, mac_addr,
 				    B_TRUE);
 				/* Couldn't give it a group, that's fine */
 				if (ngrp == NULL)
@@ -1809,7 +1809,7 @@ mac_client_set_rings_prop(mac_client_impl_t *mcip, mac_resource_props_t *mrp,
 		}
 
 		if (group == defgrp && ((mrp->mrp_nrxrings > 0) || unspec)) {
-			ngrp = 	mac_reserve_rx_group(mcip, mac_addr, B_TRUE);
+			ngrp = mac_reserve_rx_group(mcip, mac_addr, B_TRUE);
 			if (ngrp == NULL)
 				return (ENOSPC);
 
@@ -1952,7 +1952,7 @@ mac_client_set_rings_prop(mac_client_impl_t *mcip, mac_resource_props_t *mrp,
 
 		/* Switch to H/W */
 		if (group == defgrp && ((mrp->mrp_ntxrings > 0) || unspec)) {
-			ngrp = 	mac_reserve_tx_group(mcip, B_TRUE);
+			ngrp = mac_reserve_tx_group(mcip, B_TRUE);
 			if (ngrp == NULL)
 				return (ENOSPC);
 			mac_tx_client_quiesce((mac_client_handle_t)mcip);
@@ -2017,7 +2017,7 @@ mac_client_set_rings_prop(mac_client_impl_t *mcip, mac_resource_props_t *mrp,
 static int
 mac_resource_ctl_set(mac_client_handle_t mch, mac_resource_props_t *mrp)
 {
-	mac_client_impl_t 	*mcip = (mac_client_impl_t *)mch;
+	mac_client_impl_t	*mcip = (mac_client_impl_t *)mch;
 	mac_impl_t		*mip = (mac_impl_t *)mcip->mci_mip;
 	mac_impl_t		*umip = mcip->mci_upper_mip;
 	int			err = 0;
@@ -3434,7 +3434,7 @@ mac_tx_cookie_t
 mac_tx(mac_client_handle_t mch, mblk_t *mp_chain, uintptr_t hint,
     uint16_t flag, mblk_t **ret_mp)
 {
-	mac_tx_cookie_t		cookie = NULL;
+	mac_tx_cookie_t		cookie = 0;
 	int			error;
 	mac_tx_percpu_t		*mytx;
 	mac_soft_ring_set_t	*srs;
@@ -3451,7 +3451,7 @@ mac_tx(mac_client_handle_t mch, mblk_t *mp_chain, uintptr_t hint,
 		MAC_TX_TRY_HOLD(mcip, mytx, error);
 		if (error != 0) {
 			freemsgchain(mp_chain);
-			return (NULL);
+			return (0);
 		}
 	}
 
@@ -3532,7 +3532,7 @@ mac_tx(mac_client_handle_t mch, mblk_t *mp_chain, uintptr_t hint,
 
 		MAC_TX(mip, srs_tx->st_arg2, mp_chain, mcip);
 		if (mp_chain == NULL) {
-			cookie = NULL;
+			cookie = 0;
 			SRS_TX_STAT_UPDATE(srs, opackets, 1);
 			SRS_TX_STAT_UPDATE(srs, obytes, obytes);
 		} else {
@@ -3602,7 +3602,7 @@ mac_tx_is_flow_blocked(mac_client_handle_t mch, mac_tx_cookie_t cookie)
 	 */
 	if (mac_srs->srs_tx.st_mode == SRS_TX_FANOUT ||
 	    mac_srs->srs_tx.st_mode == SRS_TX_AGGR) {
-		if (cookie != NULL) {
+		if (cookie != 0) {
 			sringp = (mac_soft_ring_t *)cookie;
 			mutex_enter(&sringp->s_ring_lock);
 			if (sringp->s_ring_state & S_RING_TX_HIWAT)
@@ -4606,7 +4606,7 @@ mac_set_resources(mac_handle_t mh, mac_resource_props_t *mrp)
 void
 mac_get_resources(mac_handle_t mh, mac_resource_props_t *mrp)
 {
-	mac_impl_t 		*mip = (mac_impl_t *)mh;
+	mac_impl_t		*mip = (mac_impl_t *)mh;
 	mac_client_impl_t	*mcip;
 
 	mcip = mac_primary_client_handle(mip);
@@ -4624,7 +4624,7 @@ mac_get_resources(mac_handle_t mh, mac_resource_props_t *mrp)
 void
 mac_get_effective_resources(mac_handle_t mh, mac_resource_props_t *mrp)
 {
-	mac_impl_t 		*mip = (mac_impl_t *)mh;
+	mac_impl_t		*mip = (mac_impl_t *)mh;
 	mac_client_impl_t	*mcip;
 
 	mcip = mac_primary_client_handle(mip);
